# wei_workflow_gen

./: .gitignore  DEMO.md  README.md  config.yaml  explorer.py  instruments copy.json  pyproject.toml  test.py
agents/: __init__.py  critic.py  tools.py
client/: README.md
env/: environment.py
prompts/: action.txt  critic.txt
src/: wei_gen.py
src/agents/: agent.py  prompts.py  wrapper.py
src/api/: main.py
src/history/: 02532c45-5b0a-4cfd-bc71-fd6fe034c005.json  02d45889-a5ae-49ef-b95c-12883ff09fe1.json  082f84c6-164b-4a6a-81b3-8888dedc43ba.json  0a917ecd-0e65-4983-bf77-cf29efc8e0b2.json  17f762cf-aeeb-44e5-b28d-5a752e2ef4ec.json  1fe07cc5-0730-4959-a63f-e9431c262ffa.json  210a9669-9ff5-4f90-b920-277a194ba6e5.json  22da1bde-0737-41fe-88c2-2e73440f4434.json  2381ceff-fc98-45a4-aa1d-f51fb5a3e2df.json  2e7bf609-8b15-4bbe-ab7b-4bec2a75a0db.json  4f22a538-6148-4ba4-88a8-fa8f33289656.json  5669c23e-9a21-4daa-8425-60f7da7c29d4.json  5b0bc978-dba1-48d9-a10d-4b28d3c04b14.json  5ccd214a-f815-44fb-8f46-ff4a9d4504b2.json  602e4d7c-7eac-4483-8004-3b8cbcc5aa1b.json  6f0a335f-6196-4e27-a4d9-ad019b061961.json  825c673c-9fca-4837-91da-3035ca38387c.json  8520f887-901c-491f-ad9b-81445ed58843.json  9fea6dff-064a-4be3-9462-836d1898eecf.json  a5c61838-85f9-4f1f-bc95-2da7362942a4.json  b0862dd2-e6c2-4228-bb75-511b2adb3398.json  b0ee79d7-7d7b-42b4-aa9c-9cde4150f1a9.json  ba6f431d-7f9a-4c1b-8785-69bf1c0e80f1.json  c36277a0-21fa-4a81-8890-abc7a363cfa4.json  (+3 more)
templates/: action_template.txt  curriculum_template.txt
utils/: general_utils.py
weifer/: __init__.py  weifer.py
(+124 files in other folders)
