[project]
name = "wei_workflow_gen"
version = "0.0.1"
description = "Create workflows from natural language input"
authors = [{name = "Brian Hsu", email = "brianhsu636@gmail.com"}, {name = "Ryan D. Lewis", email = "ryan.lewis@anl.gov"}]
dependencies = [
    "ad_sdl.wei"
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/AD-SDL/wei_workflow_gen"

